--- a/kinza.html
+++ b/kinza.html
@@ -16,5 +16,6 @@
         <li>Git remote add origin http://gitub.com/Aromatariq/github</li>
         <li>Git push -u origin main</li>
     </ul>
+    <h2>this is heading</h2>
 </body>
 </html>
